error_log.txt

======================Sun Mar 19 2017 22:50:45 GMT+0800 (中国标准时间)=============
listen EACCES 0.0.0.0:80


Error: listen EACCES 0.0.0.0:80
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at Server._listen2 (net.js:1240:19)
    at listen (net.js:1289:10)
    at Server.listen (net.js:1385:5)
    at EventEmitter.listen (C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\node_modules\express\lib\application.js:618:24)
    at C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\main.js:76:17
    at _combinedTickCallback (internal/process/next_tick.js:67:7)
    at process._tickCallback (internal/process/next_tick.js:98:9)

=========================
======================Sun Mar 19 2017 22:52:33 GMT+0800 (中国标准时间)=============
listen EACCES 0.0.0.0:80


Error: listen EACCES 0.0.0.0:80
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at Server._listen2 (net.js:1240:19)
    at listen (net.js:1289:10)
    at Server.listen (net.js:1385:5)
    at EventEmitter.listen (C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\node_modules\express\lib\application.js:618:24)
    at C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\main.js:76:17
    at _combinedTickCallback (internal/process/next_tick.js:67:7)
    at process._tickCallback (internal/process/next_tick.js:98:9)

=========================
======================Sun Mar 19 2017 23:04:15 GMT+0800 (中国标准时间)=============
listen EACCES 0.0.0.0:80


Error: listen EACCES 0.0.0.0:80
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at Server._listen2 (net.js:1240:19)
    at listen (net.js:1289:10)
    at Server.listen (net.js:1385:5)
    at EventEmitter.listen (C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\node_modules\express\lib\application.js:618:24)
    at C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\main.js:76:17
    at _combinedTickCallback (internal/process/next_tick.js:67:7)
    at process._tickCallback (internal/process/next_tick.js:98:9)

=========================
======================Sun Mar 19 2017 23:21:05 GMT+0800 (中国标准时间)=============
listen EACCES 0.0.0.0:80


Error: listen EACCES 0.0.0.0:80
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at Server._listen2 (net.js:1240:19)
    at listen (net.js:1289:10)
    at Server.listen (net.js:1385:5)
    at EventEmitter.listen (C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\node_modules\express\lib\application.js:618:24)
    at C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\main.js:76:17
    at _combinedTickCallback (internal/process/next_tick.js:67:7)
    at process._tickCallback (internal/process/next_tick.js:98:9)

=========================
======================Sun Mar 19 2017 23:21:45 GMT+0800 (中国标准时间)=============
listen EACCES 0.0.0.0:80


Error: listen EACCES 0.0.0.0:80
    at Object.exports._errnoException (util.js:1007:11)
    at exports._exceptionWithHostPort (util.js:1030:20)
    at Server._listen2 (net.js:1240:19)
    at listen (net.js:1289:10)
    at Server.listen (net.js:1385:5)
    at EventEmitter.listen (C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\node_modules\express\lib\application.js:618:24)
    at C:\SevenFile\WORK\project\00000A\001_easychat\easyChatPlatform\main.js:76:17
    at _combinedTickCallback (internal/process/next_tick.js:67:7)
    at process._tickCallback (internal/process/next_tick.js:98:9)

=========================
======================Mon Mar 20 2017 19:47:48 GMT+0800 (中国标准时间)=============
Unexpected token {


C:\Projects\easyChatPlatform\cus_wifs\statistics.js:42
            {
            ^
SyntaxError: Unexpected token {
    at Object.exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at C:\Projects\easyChatPlatform\web_ifaces.js:371:17
    at connectCallback (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\mongo_client.js:426:5)

=========================
======================Mon Mar 20 2017 19:47:57 GMT+0800 (中国标准时间)=============
Cannot read property '0' of undefined


TypeError: Cannot read property '0' of undefined
    at C:\Projects\easyChatPlatform\web_ifaces.js:283:38
    at handleCallback (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\utils.js:95:56)
    at C:\Projects\easyChatPlatform\node_modules\mongodb\lib\cursor.js:849:22
    at nextFunction (C:\Projects\easyChatPlatform\node_modules\mongodb-core\lib\cursor.js:540:16)
    at Cursor.next [as _next] (C:\Projects\easyChatPlatform\node_modules\mongodb-core\lib\cursor.js:692:3)
    at fetchDocs (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\cursor.js:848:10)
    at toArray (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\cursor.js:875:3)
    at Cursor.toArray (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\cursor.js:828:44)
    at C:\Projects\easyChatPlatform\web_ifaces.js:281:47
    at Layer.handle [as handle_request] (C:\Projects\easyChatPlatform\node_modules\express\lib\router\layer.js:95:5)

=========================
======================Mon Mar 20 2017 20:10:24 GMT+0800 (中国标准时间)=============
Unexpected token )


C:\Projects\easyChatPlatform\cus_wifs\statistics.js:177
            db.collection("Statistics").find({createTime: {$gte: json.startTime,$lt: json.endTime}).toArray(function(err,list){
                                                                                                  ^
SyntaxError: Unexpected token )
    at Object.exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at C:\Projects\easyChatPlatform\web_ifaces.js:371:17
    at connectCallback (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\mongo_client.js:426:5)

=========================
======================Mon Mar 20 2017 20:31:45 GMT+0800 (中国标准时间)=============
Unexpected token )


C:\Projects\easyChatPlatform\cus_wifs\statistics.js:182
                db.collection("Statistics").find({createTime: {$gte: json.startTime,$lt: json.endTime}).toArray(function(err,list){
                                                                                                      ^
SyntaxError: Unexpected token )
    at Object.exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at C:\Projects\easyChatPlatform\web_ifaces.js:371:17
    at connectCallback (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\mongo_client.js:426:5)

=========================
======================Mon Mar 20 2017 20:41:48 GMT+0800 (中国标准时间)=============
Unexpected token {


C:\Projects\easyChatPlatform\cus_wifs\statistics.js:47
                {
                ^
SyntaxError: Unexpected token {
    at Object.exports.runInThisContext (vm.js:53:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at C:\Projects\easyChatPlatform\web_ifaces.js:371:17
    at connectCallback (C:\Projects\easyChatPlatform\node_modules\mongodb\lib\mongo_client.js:426:5)

=========================